# transliterate

./: .coveragerc  .gitignore  .hgignore  .hgtags  .project  .pylintrc  .travis.yml  CHANGELOG.rst  CREDITS.rst  LICENSE_GPL2.0.txt  LICENSE_LGPL_2.1.txt  MANIFEST.in  README.rst  TODOS.rst  bitdeli_snippet.rst  builddocs.sh  pyproject.toml  pytest.ini  readme.rst  rebuild_docs.sh  requirements.txt  runtests.py  setup.cfg  setup.py  shell.py  source_install.sh  test.sh  test_python3.2.sh  todos.rst  tox.ini  uninstall.sh
.github/workflows/: codeql.yml
docs/: Makefile  changelog.rst  conf.distrib  conf.py  documentation.rst.distrib  index.rst  make.bat  transliterate.backports.rst  transliterate.contrib.apps.rst  transliterate.contrib.apps.translipsum.rst  transliterate.contrib.languages.bg.data.rst  transliterate.contrib.languages.bg.rst  transliterate.contrib.languages.el.data.rst  transliterate.contrib.languages.el.rst  transliterate.contrib.languages.he.rst  transliterate.contrib.languages.hi.rst  transliterate.contrib.languages.hy.data.rst  transliterate.contrib.languages.hy.rst  transliterate.contrib.languages.ka.data.rst  transliterate.contrib.languages.ka.rst  transliterate.contrib.languages.l1.data.rst  transliterate.contrib.languages.l1.rst  transliterate.contrib.languages.mk.data.rst  transliterate.contrib.languages.mk.rst  transliterate.contrib.languages.mn.data.rst  transliterate.contrib.languages.mn.rst  transliterate.contrib.languages.rst  transliterate.contrib.languages.ru.data.rst  transliterate.contrib.languages.ru.rst  transliterate.contrib.languages.sr.data.rst  transliterate.contrib.languages.sr.rst  transliterate.contrib.languages.uk.data.rst  transliterate.contrib.languages.uk.rst  transliterate.contrib.rst  transliterate.rst  transliterate.tests.data.rst  transliterate.tests.rst
example/: README.rst
example/example/foo/: greekunaccented.py  latin_to_latin.py  samples.py  tests.py
example/requirements/: code_style.txt  dev.txt  docs.txt  test.txt
jupyter/: README.rst  transliterate.ipynb
scripts/: build_docs.sh  clean_up.sh  make_release.sh  prepare_docs.sh  pycodestyle.sh  pylint.sh  rebuild_docs.sh  source_install.sh  test.sh
songbook-utils/: test.py  to_latin.py
src/transliterate/: __init__.py  __main__.py  base.py  conf.py  decorators.py  defaults.py  discover.py  exceptions.py  helpers.py  settings.py  test.py  test_python3.2.py  utils.py
src/transliterate/backports/: collections.py
src/transliterate/contrib/apps/translipsum/: __init__.py  readme.rst  utils.py
src/transliterate/contrib/languages/bg/: translit_language_pack.py
src/transliterate/contrib/languages/el/: README.rst  translit_language_pack.py
src/transliterate/contrib/languages/he/: translit_language_pack.py
src/transliterate/tests/: __init__.py  base.py  defaults.py  helpers.py  test_transliterate.py
src/transliterate/tests/data/: __init__.py  default.py  normal.py  python32.py
src/transliterate/tests/jsonize/: test.py
test/: bg.json  el.json  hy.json  ka.json  ru.json  temp.json  uk.json
(+50 files in other folders)
