[metadata]
name = transliterate
author = Artur Barseghyan
author_email = artur.barseghyan@gmail.com
license = GPL-2.0-only OR LGPL-2.1-or-later
description = Bi-directional transliterator for Python
keywords = translit, transliteration
url = https://github.com/barseghyanartur/transliterate
long_description = file: README.rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Natural Language :: Bulgarian
    Natural Language :: Greek
    Natural Language :: Macedonian
    Natural Language :: Russian
    Natural Language :: Serbian
    Natural Language :: Ukrainian

[options]
package_dir =
     = src
packages = find:
install_requires =
    six>=1.1.0
    lorem-ipsum-generator==0.3; python_version < "3.1.0"
include_package_data = True

[options.extras_require]
test =
    factory_boy
    fake-factory
    pytest
    pytest-django
    pytest-cov
    tox

[options.packages.find]
where = ./src

[bdist_wheel]
universal = 1
